# tinycbor

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  Makefile.configure  Makefile.nmake  README  README.md  TODO  index.html  keywords.txt  library.properties  maketag.pl  master-branch-renamed-to-main  tinycbor.pc.in
.github/workflows/: build.yml
0.3/: a00002.html  a00003.html  a00005.html  a00005_source.html  a00009.html  a00009_source.html  a00014.html  a00015.html  a00016.html  a00017.html  a00018.html  a00019.html  annotated.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  globals_vars.html  index.hhc  index.hhk  index.hhp  index.html  modules.html
0.4/: a00008.html  a00008_source.html  a00032.html  a00032_source.html  a00080_source.html  a00086.html  a00087.html  a00088.html  a00089.html  a00090.html  a00094.html  a00106.html  annotated.html  classes.html  files.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  globals_vars.html  index.hhc  index.hhk  index.hhp  index.html  menudata.js  modules.html
0.5/: a00001.html  a00002.html  a00004.html  a00004_source.html  a00005.html  a00005_source.html  a00008.html  a00008_source.html  a00016_source.html  a00017.html  a00017_source.html  a00018.html  a00019.html  a00020.html  a00021.html  a00041_source.html  a00045.html  a00046.html  a00047.html  a00047_source.html  a00048.html  a00049.html  a00053.html  a00065.html  a00128_source.html  a00138.html  a00139.html  a00140.html  a00141.html  a00142.html  a00146.html  a00158.html  annotated.html  classes.html  files.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  globals_vars.html  (+7 more)
0.6/: a00001.html  a00002.html  a00004.html  a00004_source.html  a00008.html  a00008_source.html  a00016_source.html  a00017.html  a00018.html  a00019.html  a00020.html  a00021.html  annotated.html  classes.html  files.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  globals_vars.html  index.hhc  index.hhk  index.hhp  index.html  library_sizes.txt  modules.html
cmake/: PackageConfig.cmake  TinyCBORHelpers.cmake
examples/: CMakeLists.txt  README.md  bufferedreader.c  bufferedwriter.c  simplereader.c  testcbor
examples/cbor_encode_sample/: cbor_encode_sample.ino
examples/cbor_parse_sample/: cbor_parse_sample.ino
library_sizes/dev/: linux-clang  linux-g++  linux-gcc-freestanding  linux-gcc-no-math  macx-clang
library_sizes/master/: linux-clang  linux-g++  linux-gcc-freestanding  linux-gcc-no-math  macx-clang
scripts/: update-docs.sh
src/: cbor.h  cborencoder.c  cborencoder_close_container_checked.c  cborencoder_float.c  cborerrorstrings.c  cborinternal_p.h  cborjson.h  cborparser.c  cborparser_dup_string.c  cborparser_float.c  cborpretty.c  cborpretty_stdio.c  cbortojson.c  cborvalidation.c  compilersupport_p.h  extract_number_p.h  math_support_p.h  memory.h  open_memstream.c  parsetags.pl  src.pri  tags.txt  tinycbor-export.h.in  tinycbor-version.h  tinycbor.cpp  tinycbor.h  tinycbor.pro  utf8_p.h
tests/: .gitignore  CMakeLists.txt  tests.pro
tests/c90/: c90.pro  tst_c90.c
tests/cpp/: cpp.pro
tests/encoder/: data.cpp  encoder.pro  tst_encoder.cpp
tests/parser/: alloc.h  parser.pro  tst_parser.cpp
tests/tojson/: tst_tojson.cpp
tools/: CMakeLists.txt  Makefile
tools/cbordump/: CMakeLists.txt  cbordump.c  cbordump.pro
tools/iana/: iana-cbor-c-header.py  iana-cbor-sources.json  makefile
tools/iana/c/: c_header_cbor.py  iana_header_utils.py  iana_settings.toml
tools/json2cbor/: CMakeLists.txt  json2cbor.c
